# fia_cm_haetae

./: .gitignore  LICENSE  README.md
docs/: HAETAE_overview_ko.md  HAETAE_signature_algorithm_ko.md
docs/haetae_reference/: CMakePresets.json
docs/haetae_reference/benchmark/: cpucycles.h  speed.c
docs/haetae_reference/include/: fft.h  fixpoint.h  params.h  polyfix.h  randombytes.h  rans_byte.h  sampler.h
docs/haetae_reference/src/: encoding.c  fft.c  fips202.c  ntt.c  polymat.c
haetae_reference/: CMakeLists.txt  README.md  SOURCE.md
haetae_reference/benchmark/: CMakeLists.txt  cpucycles.c  speed_print.c  speed_print.h
haetae_reference/include/: api.h  common.h  config.h  encoding.h  fips202.h  ntt.h  packing.h  reduce.h
haetae_reference/kat/: CMakeLists.txt  PQCgenKAT_sign.c  kat_api.h  kat_sign.c  rng.c  rng.h
haetae_reference/src/: decompose.c  fixpoint.c  polyfix.c  randombytes.c  sampler.c
haetae_reference/test/: CMakeLists.txt  main.c
test/: README.md
test/2026-06-28/: README.md  attack_defense_analysis.md  campaign_raw.csv  cm_coverage_sim.py  coverage_detail.csv  coverage_summary.json  fullsign_keyrecovery_report.md  overhead_clean.csv  simulation_coverage_report.md
test/2026-06-28/sim_code/: README.md
test/2026-06-28/sim_code/by_countermeasure/: baseline.c  double.c  irv.c  leeha.c
test/2026-06-28/sim_code/common/: .gitignore  Makefile  campaign.c  fi_rng.c  overhead.c  sign_fi.c  test2.c
test/2026-06-28/sim_code/common/haetae_src/: packing.c  poly.c  polyvec.c  reduce.c  sign.c  symmetric-shake.c
test/2026-06-28/sim_code/common/include/: decompose.h  poly.h  polymat.h  polyvec.h  symmetric.h
test/2026-06-30/: 2ndorder.csv  README.md  coverage.csv  overhead.csv  success_rate.csv  timing.csv
test/2026-06-30/code/: Lab_HAETAE_F4_FullSign_v1.ipynb  Lab_HAETAE_F4_FullSign_v1_1_goodresult.ipynb  README_build.md  haetae_recover.py
test/2026-06-30/code/docs/: IRV_design_notes.md
test/2026-06-30/code/firmware/: fault_sim.h  haetae_sign_cm.c  makefile  simpleserial-haetae.c
